<resources>
    <string name="app_name" translatable="false">GoOffline</string>

    <string name="date_format" formatted="false" translatable="false">%02d.%02d.%04d</string>
    <string name="time_format" formatted="false" translatable="false">%d:%02d:%02d</string>
    <string name="allowed_time_format_h" formatted="false" translatable="false">%d godz, %02d min</string>
    <string name="allowed_time_format_m" formatted="false" translatable="false">%02d min</string>
    <string name="app_slider_time_value" formatted="false" translatable="false">%d:%02d:00</string>
    <string name="home_total_limit" formatted="false" translatable="false">%d:%02d:00</string>
    <string name="home_sleeptime_range" formatted="false" translatable="false">%d:00 - %d:00</string>
    <string name="bonus_time_format" formatted="false" translatable="false">%d min</string>

    <string name="settings_fragment_name">Ustawienia</string>
    <string name="settings_enable_service">Włącz serwis</string>
    <string name="settings_list_whtelist">Ustawienia wyjątków</string>
    <string name="settings_list_sleeptime">Czas snu</string>
    <string name="settings_list_game">Łamigłówki</string>
    <string name="settings_list_journal">Dziennik akcji</string>
    <string name="settings_list_permissions">Menadżer uprawnień</string>
    <string name="settings_list_security">Ustawwiania PINu</string>
    <string name="settings_notification_title">Serwis</string>
    <string name="settings_notification_content_on">Serwis został włączony.</string>
    <string name="settings_notification_content_off">Serwis został wyłączony. Od teraz żadne dane nie są zbierane.</string>

    <string name="just_search1">Szukaj</string>
    <string name="just_loading">Ładowanie…</string>
    <string name="just_saved_changes">Zapisano zmiany.</string>

    <string name="card_header_time">Limit użycia</string>
    <string name="card_header_rules">Reguły aplikacji</string>
    <string name="card_header_game">Dodatkowy czas</string>
    <string name="card_header_sleep">Czas snu</string>
    <string name="card_header_stats">Historia użycia</string>

    <string name="card_descr_time">Wyczerpanie limitu czasu spowoduje włączenie systemu blokowania aplikacji.</string>
    <string name="card_descr_rules">Reguły zostają zastosowane do aplikacji, które nie znajdują się na liście wyjątków.</string>
    <string name="card_descr_game">Rozwiąż zagadkę, aby zdobyć dodatkowy czas. Liczba prób jest ograniczona.</string>
    <string name="card_descr_sleep">Czas snu włącza system blokady aplikacji niezależnie od wykorzystanego limitu.</string>
    <string name="card_descr_stats">Analiza zebranych danych o czasie spędzonym przy aplikacjach..</string>

    <string name="card_button_rules">Sprawdź</string>
    <string name="card_button_game">Graj</string>
    <string name="card_button_stats">przeglądaj</string>

    <string name="services_channel_id" translatable="false">gooffline_channel_service</string>
    <string name="services_channel_name">Usługi</string>
    <string name="monitor_notification_header">Monitorowanie aplikacji</string>
    <string name="monitor_notification_text">Aplikacja monitoruje używane aplikacje zgodnie z polityką administratora urządzenia.</string>

    <!-- FRAGMENT: ustawienia aplikacji -->
    <string name="apps_fragment_name">Ustawienia aplikacji</string>
    <string name="apps_sleep_switch_name">Wyjątki aktywne w trybie snu</string>
    <string name="apps_whitelist_row_name">Edytuj listę wyjątków</string>
    <string name="apps_settings_switch_name">Zablokuj ustawienia systemu</string>
    <string name="apps_settings_allowed_time">Limit czasu dla aplikacji</string>

    <!-- FRAGMENT: lista wyjątków -->
    <string name="whitelist_fragment_name">Lista wyjątków</string>
    <string name="whitelist_search_placeholder">Szukaj…</string>
    <string name="whitelist_save_button_text">Zapisz zmiany</string>

    <!-- FRAGMENT: czas snu -->
    <string name="sleeptime_fragment_name">Czas snu</string>
    <string name="sleeptime_switch_name">Włącz czas snu</string>
    <string name="sleeptime_switch_desc">Określ czas, podczas którego dozwolone będzie korzystanie z telefonu. Aktywność po tym czasie powoduje zablokowanie aplikacji niezależnie od limitu czasu, który został wykorzystany.</string>
    <string name="sleeptime_range_tooltip" formatted="false">%.0f:00</string>

    <!-- FRAGMENT: dodatkowy czas -->
    <string name="game_fragment_name">Dodatkowy czas</string>
    <string name="game_fragment_toggler">Dodatkowy czas</string>
    <string name="game_fragment_description">Dodatkowy czas daje użytkownikowi możliwość rozwiązania zagadki w celu zwiększenia swojego limitu czasowego, przez który może używać urządzenia.</string>
    <string name="game_fragment_caption_attempts">Liczba prób</string>
    <string name="game_fragment_caption_time">Czas za próbę</string>
    <string name="game_fragment_button_wordbase">Baza wiedzi</string>

    <!-- FRAGMENT: lista słów -->
    <string name="wordbase_fragment_name">Baza słówek</string>

    <!-- FRAGMENT: formularz słowa -->
    <string name="wordbase_form_fragment_name">Formularz słowa</string>

    <!-- FRAGMENT: statystyki -->
    <string name="stats_fragment_name">Analiza danych</string>

    <!-- FRAGMENT: logi -->
    <string name="journal_fragment_name">Dziennik akcji</string>

    <!-- FRAGMENT: play -->
    <string name="play_fragment_name">Zagadka</string>

    <!-- FRAGMENT: polityka -->
    <string name="policy_fragment_name">Lista wyjątków</string>
    <string name="policy_dialog_no_exceptions">Administrator urządzenia nie włączył żadnych wyjątków.</string>
    <string name="policy_label_text">Po włączeniu systemu blokady można korzystać z poniższych programów.</string>

</resources>