<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activityPadding"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/apps_option_row_whitelist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/separatorSize"
        android:clickable="true"
        android:orientation="horizontal"
        android:theme="@style/Theme.GoOffline.Fragment.BtnShortcut">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingVertical="5dp"
            android:text="Lista aplikacji i wyjątków"
            android:theme="@style/Theme.GoOffline.Fragment.BtnShortcut.Caption"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_list_item_arrow"
            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/separatorSizeSmaller"
        android:paddingBottom="@dimen/activityLayoutPadding"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingVertical="5dp"
                    android:layout_weight="2"
                    android:theme="@style/Theme.GoOffline.Fragment.Label"
                    android:text="@string/apps_settings_allowed_time"
                    />
                <TextView
                    android:id="@+id/app_slider_time_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingVertical="5dp"
                    android:layout_weight="2"
                    android:textSize="18sp"
                    android:textAlignment="viewEnd"
                    android:textColor="?attr/colorSecondary"
                    />

            </LinearLayout>

            <com.google.android.material.slider.Slider
                android:id="@+id/apps_time_slider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:valueFrom="10"
                android:valueTo="720"
                android:stepSize="10"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/apps_option_row_active_while_sleeping"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/activityLayoutPaddingSmaller"
                android:orientation="horizontal"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="18sp"
                    android:text="@string/apps_sleep_switch_name"
                    />
                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/apps_option_row_active_while_sleeping_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/apps_option_row_disable_options"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingVertical="@dimen/activityLayoutPaddingSmaller"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="18sp"
                    android:text="@string/apps_settings_switch_name"
                    />
                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/apps_option_row_disable_options_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:clickable="false"
                    />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>